# omnitool

./: HLD.md  IMPLEMENTATION_PLAN.md  LICENSE  MACOS_SIGNING.md  OMNI_CHAINS_DESIGN.md  PRD.md  README.md  RELEASE_CHECKLIST.md  TRADE_OFFS.md  brainstorm.md  package-lock.json  package.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy-pages.yml  release.yml
landing-page/: index.html  robots.txt  sitemap.xml
omnitool/: package.json  tailwind.config.js
omnitool/src/: App.tsx  ChainWorkspace.tsx  index.css
omnitool/src-tauri/: Cargo.toml  tauri.conf.json
omnitool/src-tauri/capabilities/: default.json
omnitool/src-tauri/icons/: icon.icns
omnitool/src-tauri/src/: detector.rs  main.rs
omnitool/src-tauri/src/tools/: json_tool.rs  jwt_tool.rs  mod.rs
omnitool/src/lib/: toolRegistry.ts
src/: App.tsx  Base64Tool.test.tsx  Base64Tool.tsx  ChainWorkspace.tsx  CommandPalette.tsx  JsonTool.tsx  ToolStepCard.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: detector.rs  main.rs
src-tauri/src/tools/: base64_tool.rs  mod.rs  url_tool.rs
src/hooks/: useChain.test.ts  useChain.ts
src/lib/: chainEngine.test.ts  chainEngine.ts  toolRegistry.ts
